--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
    <ul>
     <li><a href="01 - JavaScript Drum Kit/drumkit.html">01 - JavaScript Drum Kit</a></li>
-    <li><a href=""></a></li>
+    <li><a href="02 - JS and CSS Clock/clock.html">02 - JS and CSS Clock</a></li>
     <li><a href=""></a></li>
     
    </ul> 
