Created 03 - CSS Variables folder

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <ul>
     <li><a href="01 - JavaScript Drum Kit/drumkit.html">01 - JavaScript Drum Kit</a></li>
     <li><a href="02 - JS and CSS Clock/clock.html">02 - JS and CSS Clock</a></li>
-    <li><a href=""></a></li>
+    <li><a href="03 - CSS Variables/cssvariables.html">03 - CSS Variables</a></li>
     
    </ul> 
 </body>
